integration/main/default/objects/Endpoint_Definition__mdt/Endpoint_Definition__mdt.object-meta.xml
<CustomObject>
    <description>Defines REST API endpoint configurations for dynamic routing in RestEntryPoint</description>
    <label>Endpoint Definition</label>
    <pluralLabel>Endpoint Definitions</pluralLabel>
</CustomObject>