integration/main/default/objects/Endpoint_Definition__mdt/fields/Allowed_Methods__c.field-meta.xml
<CustomField>
    <fullName>Allowed_Methods__c</fullName>
    <label>Allowed Methods</label>
    <description>Comma-separated list of allowed HTTP methods (GET, POST, PUT, PATCH, DELETE). Leave blank to allow all methods.</description>
    <type>Text</type>
    <length>100</length>
</CustomField>