integration/main/default/objects/Endpoint_Definition__mdt/fields/DELETE_Enabled__c.field-meta.xml
<CustomField>
    <fullName>DELETE_Enabled__c</fullName>
    <defaultValue>false</defaultValue>
    <description>When checked, DELETE requests are enabled for the endpoint</description>
    <inlineHelpText>When checked, DELETE requests are enabled for the endpoint</inlineHelpText>
    <label>DELETE Enabled</label>
    <type>Checkbox</type>
</CustomField>