integration/main/default/objects/Endpoint_Definition__mdt/fields/Endpoint_Pattern__c.field-meta.xml
<CustomField>
    <fullName>Endpoint_Pattern__c</fullName>
    <description>The URL pattern for this endpoint. Supports dynamic segments using {pathVariable} syntax. Example: /api/users/{userId}/posts/{postId}</description>
    <inlineHelpText>The URL pattern for this endpoint. Supports dynamic segments using {pathVariable} syntax. Example: /api/users/{userId}/posts/{postId}</inlineHelpText>
    <label>Endpoint Pattern</label>
    <length>255</length>
    <required>true</required>
    <type>Text</type>
</CustomField>