integration/main/default/objects/Endpoint_Definition__mdt/fields/GET_Enabled__c.field-meta.xml
<CustomField>
    <fullName>GET_Enabled__c</fullName>
    <defaultValue>false</defaultValue>
    <description>When checked, GET requests are enabled for the endpoint</description>
    <inlineHelpText>When checked, GET requests are enabled for the endpoint</inlineHelpText>
    <label>GET Enabled</label>
    <type>Checkbox</type>
</CustomField>