integration/main/default/objects/Endpoint_Definition__mdt/fields/Handler_Class__c.field-meta.xml
<CustomField>
    <fullName>Handler_Class__c</fullName>
    <label>Handler Class</label>
    <description>The fully qualified name of the Apex class that implements the Requestable interface to handle this endpoint</description>
    <required>true</required>
    <type>Text</type>
    <length>255</length>
</CustomField>