integration/main/default/objects/Endpoint_Definition__mdt/fields/Is_Active__c.field-meta.xml
<CustomField>
    <fullName>Is_Active__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Indicates if this endpoint definition is active and should be considered for routing</description>
    <inlineHelpText>Indicates if this endpoint definition is active and should be considered for routing</inlineHelpText>
    <label>Is Active</label>
    <type>Checkbox</type>
</CustomField>