integration/main/default/objects/Endpoint_Definition__mdt/fields/IsActive__c.field-meta.xml
<CustomField>
    <fullName>IsActive__c</fullName>
    <label>Is Active</label>
    <description>Whether this endpoint definition is active and should be considered for routing</description>
    <type>Checkbox</type>
    <defaultValue>true</defaultValue>
</CustomField>