integration/main/default/objects/Endpoint_Definition__mdt/fields/PATCH_Enabled__c.field-meta.xml
<CustomField>
    <fullName>PATCH_Enabled__c</fullName>
    <defaultValue>false</defaultValue>
    <description>When checked, PATCH requests are enabled for the endpoint</description>
    <inlineHelpText>When checked, PATCH requests are enabled for the endpoint</inlineHelpText>
    <label>PATCH Enabled</label>
    <type>Checkbox</type>
</CustomField>