integration/main/default/objects/Endpoint_Definition__mdt/fields/POST_Enabled__c.field-meta.xml
<CustomField>
    <fullName>POST_Enabled__c</fullName>
    <defaultValue>false</defaultValue>
    <description>When checked, POST requests are enabled for the endpoint</description>
    <inlineHelpText>When checked, POST requests are enabled for the endpoint</inlineHelpText>
    <label>POST Enabled</label>
    <type>Checkbox</type>
</CustomField>