integration/main/default/objects/Endpoint_Definition__mdt/fields/Priority__c.field-meta.xml
<CustomField>
    <fullName>Priority__c</fullName>
    <label>Priority</label>
    <description>Priority order for matching endpoints. Lower numbers are matched first. Used when multiple patterns could match the same request.</description>
    <type>Number</type>
    <precision>5</precision>
    <scale>0</scale>
    <defaultValue>100</defaultValue>
</CustomField>