integration/main/default/objects/Endpoint_Definition__mdt/fields/PUT_Enabled__c.field-meta.xml
<CustomField>
    <fullName>PUT_Enabled__c</fullName>
    <defaultValue>false</defaultValue>
    <description>When checked, PUT requests are enabled for the endpoint</description>
    <inlineHelpText>When checked, PUT requests are enabled for the endpoint</inlineHelpText>
    <label>PUT Enabled</label>
    <type>Checkbox</type>
</CustomField>