integration/main/default/objects/Endpoint_Definition__mdt/fields/Requires_Authentication__c.field-meta.xml
<CustomField>
    <fullName>Requires_Authentication__c</fullName>
    <defaultValue>true</defaultValue>
    <description>Whether this endpoint requires authentication. Future enhancement for authentication validation.</description>
    <label>Requires Authentication</label>
    <type>Checkbox</type>
</CustomField>