integration/main/default/objects/Endpoint_Definition__mdt/fields/Success_Response_Code__c.field-meta.xml
<CustomField>
    <fullName>Success_Response_Code__c</fullName>
    <defaultValue>200</defaultValue>
    <description>HTTP status code to return on successful request processing (e.g., 200, 201, 204)</description>
    <inlineHelpText>HTTP status code to return on successful request processing (e.g., 200, 201, 204)</inlineHelpText>
    <label>Success Response Code</label>
    <precision>3</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>